3Dグラフィック機能追加、関数名の見直し他

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -30,6 +30,7 @@
                     </MenuItem>
                     <!--<MenuItem Header="TEST">
                         <MenuItem Name="GraphViewMenu" Header="グラフ" Click="Menu_Click" />
+                        <MenuItem Name="Plot3DViewMenu" Header="3D表示" Click="Menu_Click" />
                     </MenuItem>-->
                 </Menu>
                 <ToolBarTray>
